--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "remixicon": "^4.7.0",
     "tailwindcss": "^4.1.17"
   },
