--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/rapier": "^2.2.0",
     "@tailwindcss/vite": "^4.1.17",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "gsap": "^3.13.0",
+    "meshline": "^3.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-typed": "^2.0.12",
     "remixicon": "^4.7.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
